# rtmls

./: .gitignore  README.md
app/: Cargo.toml
app/src/: app.rs  main.rs  utils.rs
app/src/model/: label.rs  mod.rs  squeezed_ckassifier.rs  squeezed_classifier.rs  squeezenet.rs
architecture_analysis_handin/: handin.md
egui-winit-wgpu-template/: Cargo.toml
egui-winit-wgpu-template/src/: command.rs  config.rs  lib.rs  main.rs  render_engine.rs  shader.wgsl
gpu_hand_in/: .gitignore  Cargo.toml  handin.md
gpu_hand_in/src/: convolution.rs  convolution_naive.wgsl  convolution_padded.wgsl  convolution_shared.wgsl  gpu_vector.rs  handin.md  main.rs  matrix_multiplication.rs  matrix_multiplication_naive.wgsl  matrix_multiplication_padded.wgsl  matrix_multiplication_tiled.wgsl  utility.rs  vector_add.rs  vector_add.wgsl
hotdog/: .env  Cargo.toml  README.md
hotdog/squeezenet/: label.rs  squeezenet1.rs
hotdog/src/: command.rs  control_panel.rs  lib.rs  main.rs  render_engine_static.rs
hotdog/src/model/: label.rs  squeezenet.rs
hotdog/src/windows/: control_panel.rs
