[package]
name = "hotnotdog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
egui_extras = { version = "0.24.2", features = ["all_loaders"] }
env_logger = "0.10.1"
image = { version = "0.24", default-features = false, features = [
  "jpeg",
  "png",
] }
rand = "0.8.5"
burn = { version = "0.11.1", features = ["ndarray", "wgpu", "candle", "train"] }
burn-import = "0.11.1"
