[package]
name = "gpu_hand_in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.16"
pollster = "0.3.0"
ordered-float = "3.7.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
futures-intrusive = "0.5.0"